Update for deprecated stuff in JDK 17
new Integer(int) and new Double(num) are deprecated in JDK 17 and will eventually removed.
Such calls have been replaced by Integer.valueOf(int) and Double.valueOf(num)

Class.newInstance() is deprecated in  JDK 17 and will eventually be removed.
Such calls have been replaced by getDeclaredConstructor().newInstane(). This
required to catch java.lang.NoSuchMethodException thrown by getDeclaredConstructor(),
and java.lang.reflect.InvocationTargetException thrown by newInstance(), and re-throw
these as new InstantiationException().